fix yellow too light to see

--- a/public/styles.css
+++ b/public/styles.css
@@ -162,7 +162,7 @@ html, body, #app {
 }
 
 .level-7>div {
-  color: #ffeb3b;
+  color: #fdd835;
 }
 
 .level-8>div {
